--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,13 @@ body {
 }
 /* ======================================== Page ======================================== */
 .page {
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
 }
 .page__main {
 }
 .page__recommended {
+}
+.page__products {
 }
 /* ================================================================================ */
 /* ======================================== Header ======================================== */
@@ -183,7 +185,8 @@ body {
 .main__container {
   position: relative;
   z-index: 5;
-  padding-top: 560px;
+  /* padding-top: 560px; */
+  padding-top: 480px;
   padding-bottom: 64px;
 }
 .main__icon {
@@ -307,7 +310,6 @@ body {
 @media (max-width: 320.98px) {
   .recommended {
     padding-top: 30px;
-    padding-bottom: 40px;
   }
   .recommended__title {
     font-size: 32px;
@@ -315,6 +317,117 @@ body {
   }
   .recommended__items {
     gap: 30px;
+  }
+}
+/* ================================================================================ */
+/* ======================================== Products ======================================== */
+.products {
+  padding-top: 80px;
+  padding-bottom: 40px;
+}
+.products__container {
+}
+.products__body {
+  display: flex;
+  justify-content: center;
+}
+.products__title {
+  text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px; /* 100% */
+  letter-spacing: -1.5px;
+  max-width: 498px;
+  margin: 0px 0px 64px 0px;
+}
+.products__title:not(:last-child) {
+  margin: 0px 0px 64px 0px;
+}
+.products__item {
+  height: 100%;
+}
+.products__item:not(:last-child) {
+  margin: 0px 0px 64px 0px;
+}
+.products__row {
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 24px;
+  margin: 0px 0px 16px 0px;
+}
+.products__image_1 {
+  flex: 0 1 66%;
+}
+.products__image_2 {
+  flex: 0 1 31.8%;
+}
+.products__image_3 {
+  flex: 0 1 31.8%;
+}
+.products__image_4 {
+  flex: 0 1 66%;
+}
+.products__image_1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.products__image_2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.products__image_3 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.products__image_4 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.products__text {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: 700;
+}
+.products__text:hover {
+  text-decoration: underline;
+}
+@media (max-width: 744.98px) {
+  .products {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+  .products__title {
+    font-size: 40px;
+    max-width: 392px;
+  }
+}
+@media (max-width: 320.98px) {
+  .products {
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+  .products__title {
+    font-size: 32px;
+    max-width: 280px;
+  }
+  .products__image_1 {
+    flex: 0 1 50%;
+  }
+  .products__image_2 {
+    flex: 0 1 50%;
+  }
+  .products__image_3 {
+    flex: 0 1 50%;
+  }
+  .products__image_4 {
+    flex: 0 1 50%;
+  }
+  .products__text {
+    font-size: 20px;
   }
 }
 /* ================================================================================ */
